@@ -1,6 +1,7 @@
 2023-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/b46505b13d4a85e26d1d5b6f9fc2a4264bf8b02f ) and raygui ( https://github.com/raysan5/raygui/commit/499e8bf7b1d9b0a92af8f685e646bc61f13c6dff )
+	* example/core_automation_events.rb : Added
 
 2023-10-08  vaiorabbit  <http://twitter.com/vaiorabbit>
 
